fixed the overlap issue with the bio and intro video

--- a/src/routes/Entertainment/components/Intro/intro.module.scss
+++ b/src/routes/Entertainment/components/Intro/intro.module.scss
@@ -57,6 +57,7 @@
     width: 100%;
     position: absolute;
     object-fit: cover;
+    margin-top: 64px;
     max-width: 1200px;
     z-index: 1;
 }
